--- a/bin/ncdproxy/tests/resource_https.yml
+++ b/bin/ncdproxy/tests/resource_https.yml
@@ -7,7 +7,7 @@ Resources:
     Version: v0.4
     Config:
       Watch:
-        - get-started.global
+        - get-started.global.c
       Rules:
         - Domain: get-started.com
           Network: Public
@@ -18,5 +18,5 @@ Resources:
           Locations:
             - Path: /
               Target:
-                CargoKey: get-started.global
-                CargoPort: 9000
+                Key: get-started.global.c
+                Port: 9000
