chore: dependencies upgrade 2023-06-06

--- a/examples/replication.yml
+++ b/examples/replication.yml
@@ -26,8 +26,7 @@ Resources:
 Cargoes:
   - Name: replication-example
     Replication:
-      Mode: Static
-      Number: 4
+      Mode: Auto
     Container:
       Image: nexthat/nanocl-get-started:latest
       Env:
