--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nanocl"
-version = "0.8.1"
+version = "0.9.0"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
 description = "The Self-Sufficient Hybrid-Cloud Orchestrator CLI"
@@ -17,6 +17,8 @@ path = "src/main.rs"
 
 [features]
 default = []
+dev = []
+test = []
 
 [build-dependencies]
 liquid = "0.26.1"
@@ -30,7 +32,7 @@ chrono = { version = "0.4.24", default-features = false, features = [
   "clock",
 ] }
 bollard-next = { version = "0.15.0" }
-nanocld_client = { version = "0.8.0" }
+nanocld_client = { version = "0.9.0" }
 
 [dependencies]
 bollard-next = { version = "0.15.0" }
@@ -39,7 +41,7 @@ serde_yaml = "0.9"
 tabled = "0.12.0"
 indicatif = "0.17.3"
 serde_json = "1.0.89"
-ntex = { version = "0.6.7", features = ["tokio"] }
+ntex = { version = "0.7.2", features = ["tokio"] }
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.1.7", features = ["derive", "cargo"] }
 tokio = { version = "1.23.1", features = ["fs"] }
@@ -54,8 +56,8 @@ dialoguer = "0.10.3"
 termios = "0.3.3"
 liquid = { version = "0.26.1", default-features = false }
 regex = "1.8.2"
-nanocld_client = { version = "0.8.0", features = ["tokio"] }
-nanocl_utils = { version = "0.1.3", features = [
+nanocld_client = { version = "0.9.0", features = ["tokio"] }
+nanocl_utils = { version = "0.2.0", features = [
   "unix",
   "io_error",
   "http_client_error",
