--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
   nstore:
     container_name: nstore.system.c
     hostname: nstore.nanocl.internal
-    image: cockroachdb/cockroach:v22.2.7
+    image: cockroachdb/cockroach:v23.1.4
     tty: true
     ports:
       - 26257:26257
@@ -82,6 +82,8 @@ services:
     tty: true
     ports:
       - 8686:8686
+    networks:
+      - system
     environment:
       - TZ=Europe/Paris
     command:
@@ -125,6 +127,8 @@ services:
     tty: true
     ports:
       - 8787:8787
+    networks:
+      - system
     environment:
       - TZ=Europe/Paris
     command:
