--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,16 +12,16 @@ services:
   nstore:
     container_name: nstore.system.c
     hostname: nstore.nanocl.internal
-    image: cockroachdb/cockroach:v22.2.7
+    image: cockroachdb/cockroach:v23.1.4
     tty: true
     ports:
       - 26257:26257
     networks:
       - system
     volumes:
-      - /var/lib/nanocl/store/ca:/ca
-      - /var/lib/nanocl/store/certs:/certs
-      - /var/lib/nanocl/store/data:/cockroach/cockroach-data
+      - ${STATE_DIR:-${HOME}/.nanocl/state/store/ca}:/ca
+      - ${STATE_DIR:-${HOME}/.nanocl/state/store/certs}:/certs
+      - ${STATE_DIR:-${HOME}/.nanocl/state/store/data}:/cockroach/cockroach-data
     environment:
       - TZ=Europe/Paris
     command:
@@ -36,7 +36,7 @@ services:
 
   nmetrics:
     container_name: nmetrics.system.c
-    image: ghcr.io/nxthat/metrsd:0.2.0
+    image: ghcr.io/nxthat/metrsd:0.3.0
     tty: true
     networks:
       - system
@@ -52,7 +52,7 @@ services:
       - io.nanocl.n=system
       - io.nanocl.cnsp=system
     volumes:
-      - /run/nanocl:/run/nanocl
+      - ${STATE_DIR:-${HOME}/.nanocl/run}:/run/nanocl
 
   nproxy:
     container_name: nproxy.system.c
@@ -67,20 +67,23 @@ services:
       - io.nanocl.n=system
       - io.nanocl.cnsp=system
     volumes:
-      - /run:/run
-      - /var/lib/nanocl/proxy/letsencrypt:/etc/letsencrypt
-      - /var/lib/nanocl/proxy/certs:/etc/nginx/certs
-      - /var/lib/nanocl/proxy/logs:/var/log/nginx/access
-      - /var/lib/nanocl/proxy/html:/usr/share/nginx/html
-      - /var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d
-      - /var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled
-      - /var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled
+      - ${RUN_DIR:-${HOME}/.nanocl/run}:/run/nanocl
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/letsencrypt}:/etc/letsencrypt
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/certs}:/etc/nginx/certs
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/logs}:/var/log/nginx/access
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/html}:/usr/share/nginx/html
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/conf.d}:/etc/nginx/conf.d
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/sites-enabled}:/etc/nginx/sites-enabled
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/streams-enabled}:/etc/nginx/streams-enabled
 
   ncdproxy:
     container_name: ncdproxy.system.c
     image: ghcr.io/nxthat/nanocl-dev:dev
     tty: true
-    network_mode: host
+    ports:
+      - 8686:8686
+    networks:
+      - system
     environment:
       - TZ=Europe/Paris
     command:
@@ -96,12 +99,12 @@ services:
       - io.nanocl.cnsp=system
     volumes:
       - ./:/project
-      - /run/nanocl:/run/nanocl
       - ~/.cargo/registry:/usr/local/cargo/registry
-      - /var/lib/nanocl/proxy/logs:/var/log/nginx/access
-      - /var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d
-      - /var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled
-      - /var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled
+      - ${RUN_DIR:-${HOME}/.nanocl/run}:/run/nanocl
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/logs}:/var/log/nginx/access
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/conf.d}:/etc/nginx/conf.d
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/sites-enabled}:/etc/nginx/sites-enabled
+      - ${STATE_DIR:-${HOME}/.nanocl/state/proxy/streams-enabled}:/etc/nginx/streams-enabled
 
   ndns:
     container_name: ndns.system.c
@@ -116,13 +119,16 @@ services:
       - io.nanocl.n=system
       - io.nanocl.cnsp=system
     volumes:
-      - /var/lib/nanocl/dns:/opt/dns
+      - ${STATE_DIR:-${HOME}/.nanocl/state/dns}:/opt/dns
 
   ncddns:
     container_name: ncddns.system.c
     image: ghcr.io/nxthat/nanocl-dev:dev
     tty: true
-    network_mode: host
+    ports:
+      - 8787:8787
+    networks:
+      - system
     environment:
       - TZ=Europe/Paris
     command:
@@ -138,8 +144,8 @@ services:
       - io.nanocl.cnsp=system
     volumes:
       - ./:/project
-      - /var/lib/nanocl/dns:/opt/dns
-      - /run/nanocl:/run/nanocl
+      - ${STATE_DIR:-${HOME}/.nanocl/state/dns}/dns:/opt/dns
+      - ${RUN_DIR:-${HOME}/.nanocl/run}:/run/nanocl
       - ~/.cargo/registry:/usr/local/cargo/registry
 
   nanocld:
@@ -161,9 +167,9 @@ services:
     volumes:
       - ./:/project
       - ~/.cargo/registry:/usr/local/cargo/registry
-      - /var/lib/nanocl:/var/lib/nanocl
-      - /run/nanocl:/run/nanocl
-      - /run/docker.sock:/run/docker.sock
+      - ${STATE_DIR:-${HOME}/.nanocl/state}:/var/lib/nanocl
+      - ${RUN_DIR:-${HOME}/.nanocl/run}:/run/nanocl
+      - //var/run/docker.sock:/run/docker.sock
     command:
       - watch
       - -w
