--- a/bin/ncdns/Cargo.toml
+++ b/bin/ncdns/Cargo.toml
@@ -1,17 +1,11 @@
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
-name = "ncdproxy"
-version = "0.5.0"
+name = "ncdns"
+version = "0.2.0"
 edition = "2021"
-authors = ["nanocl contributors <team@next-hat.com>"]
-description = "Official nanocl controller daemon proxy"
-readme = "readme.md"
-license = "MIT OR Apache-2.0"
-homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
-repository = "https://github.com/nxthat/nanocld"
 
 [[bin]]
-name = "ncdproxy"
+name = "ncdns"
 test = true
 bench = false
 path = "src/main.rs"
@@ -26,22 +20,17 @@ clap_mangen = { version = "0.2" }
 
 [dev-dependencies]
 serde_yaml = "0.9.19"
-bollard-next = "0.15.0"
 
 [dependencies]
 log = "0.4.17"
-clap = { version = "4.1.7", features = ["derive"] }
+clap = { version = "4.1.4", features = ["derive"] }
 ntex = { version = "0.7.2", features = ["tokio"] }
 tokio = { version = "1.23.1", features = ["fs"] }
-serde = "1.0.154"
-serde_json = "1.0.91"
-futures = "0.3.25"
-notify = { version = "6.0.0", default-features = false, features = [
-  "macos_kqueue",
-] }
-nanocld_client = { version = "0.9.0" }
+futures = "0.3.26"
+serde = { version = "1.0.158", features = ["derive"] }
+serde_json = "1.0.94"
+nanocld_client = "0.9.0"
 nanocl_utils = { version = "0.2.0", features = [
-  "ntex",
   "logger",
   "io_error",
   "http_error",
