--- a/installer.nightly.yml
+++ b/installer.nightly.yml
@@ -41,9 +41,9 @@ Cargoes:
           - ${{ state_dir }}/proxy/sites-enabled:/etc/nginx/sites-enabled
           - ${{ state_dir }}/proxy/streams-enabled:/etc/nginx/streams-enabled
 
-  - Name: ncdproxy
+  - Name: ncproxy
     Container:
-      Image: ghcr.io/nxthat/ncdproxy:0.5.0-nightly
+      Image: ghcr.io/nxthat/ncproxy:0.5.0-nightly
       Tty: true
       Env:
         - TZ=Europe/Paris
@@ -66,11 +66,11 @@ Cargoes:
         Binds:
           - ${{ state_dir }}/dns:/opt/dns
 
-  - Name: ncddns
+  - Name: ncdns
     Container:
       Env:
         - TZ=Europe/Paris
-      Image: ghcr.io/nxthat/ncddns:0.2.0-nightly
+      Image: ghcr.io/nxthat/ncdns:0.2.0-nightly
       Tty: true
       Cmd:
         - --conf-dir
