--- a/bin/ncvpnkit/Cargo.toml
+++ b/bin/ncvpnkit/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.17"
+futures-util = "0.3.28"
 ntex = { version = "0.7.2", features = ["tokio"] }
-vpnkitrc = { version = "0.1.0", features = ["tokio"] }
+vpnkitrc = { version = "0.1.1", features = ["tokio"] }
+nanocld_client = { version = "0.9.0" }
+nanocl_utils = { version = "0.2.0", features = ["logger"] }
+serde_json = "1.0.99"
