--- a/Makefile.toml
+++ b/Makefile.toml
@@ -47,7 +47,16 @@ args = ["nextest", "run", "-p", "nanocl"]
 # Test all
 [tasks.tests]
 command = "cargo"
-args = ["nextest", "run", "--no-default-features", "--features", "test", "${@}"]
+args = [
+  "nextest",
+  "run",
+  "--no-default-features",
+  "--features",
+  "test",
+  "${@}",
+  "-j",
+  "1",
+]
 
 # Test all with debug output
 [tasks.tests-debug]
@@ -68,7 +77,15 @@ args = ["compose", "up"]
 # Test coverage
 [tasks.cov]
 command = "cargo"
-args = ["llvm-cov", "nextest", "--no-default-features", "--features", "test"]
+args = [
+  "llvm-cov",
+  "nextest",
+  "--no-default-features",
+  "--features",
+  "test",
+  "-j",
+  "1",
+]
 
 # Test all with coverage for codecov
 [tasks.covgen]
@@ -82,6 +99,8 @@ args = [
   "--output-path",
   "./lcov.info",
   "--lcov",
+  "-j",
+  "1",
 ]
 
 # Release
