feature: installer refactor for docker desktop

--- a/.github/workflows/draft_stable_nanocl.yml
+++ b/.github/workflows/draft_stable_nanocl.yml
@@ -3,11 +3,11 @@ name: Draft Stable Nanocl
 on:
   push:
     branches:
-      - "release-stable-nanocl-*"
+      - "release/stable/nanocl/*"
   pull_request:
     branches:
-      - "release-stable-nanocl-*"
-    types: [opened, synchronize, closed]
+      - "release/stable/nanocl/*"
+    types: [opened, synchronize]
 
 env:
   CARGO_TERM_COLOR: always
