--- a/.github/workflows/draft_nightly_image.yml
+++ b/.github/workflows/draft_nightly_image.yml
@@ -3,11 +3,11 @@ name: Draft Nightly Image
 on:
   push:
     branches:
-      - "release-nightly-*"
+      - "release/nightly/bin/*"
   pull_request:
     branches:
-      - "release-nightly-*"
-    types: [opened, synchronize, closed]
+      - "release/nightly/bin/*"
+    types: [opened, synchronize]
 
 env:
   CARGO_TERM_COLOR: always
@@ -32,10 +32,10 @@ jobs:
       - name: Set info
         run: |
           echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-          echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
-          echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
-          echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
-          echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $4}')" >> $GITHUB_ENV
+          echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F/ '{print $2}')" >> $GITHUB_ENV
+          echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F/ '{print $2}')" >> $GITHUB_ENV
+          echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F/ '{print $4}')" >> $GITHUB_ENV
+          echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F/ '{print $5}')" >> $GITHUB_ENV
       # Print info for debug
       - name: Print Info
         run: |
