--- a/.github/workflows/draft_nightly_image.yml
+++ b/.github/workflows/draft_nightly_image.yml
@@ -32,13 +32,14 @@ jobs:
       - name: Set info
         run: |
           echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-          echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F/ '{print $2}')" >> $GITHUB_ENV
-          echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F/ '{print $2}')" >> $GITHUB_ENV
-          echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F/ '{print $4}')" >> $GITHUB_ENV
-          echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F/ '{print $5}')" >> $GITHUB_ENV
+          echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F\/ '{print $2}')" >> $GITHUB_ENV
+          echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F\/ '{print $2}')" >> $GITHUB_ENV
+          echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F\/ '{print $4}')" >> $GITHUB_ENV
+          echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F\/ '{print $5}')" >> $GITHUB_ENV
       # Print info for debug
       - name: Print Info
         run: |
+          echo ${GITHUB_REF##*/}
           echo $BRANCH_NAME
           echo $BINARY_NAME
           echo $CHANNEL
