--- a/.github/workflows/draft_nightly_image.yml
+++ b/.github/workflows/draft_nightly_image.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Print Info
         run: |
           echo ${GITHUB_REF###*/}
+          echo $GITHUB_REF
           echo $BRANCH_NAME
           echo $BINARY_NAME
           echo $CHANNEL
