--- a/.github/workflows/publish_nightly_image.yml
+++ b/.github/workflows/publish_nightly_image.yml
@@ -1,4 +1,4 @@
-name: Draft Nightly Image
+name: Publish nightly image
 
 on:
   push:
@@ -28,6 +28,13 @@ jobs:
         with:
           path: /tmp/.buildx-cache
           key: buildx-cache
+      # Login to ghcr.io
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: nexthatbot
+          password: ${{ secrets.BOT_TOKEN }}
       # Extract branch info
       - name: Set info
         run: |
@@ -43,12 +50,15 @@ jobs:
           echo $BINARY_NAME
           echo $CHANNEL
           echo $VERSION
+      - name: Create buildx multiarch
+        run: docker buildx create --use --name=buildx-multi-arch --driver=docker-container --driver-opt=network=host
+
       # Build daemon image
       - name: Build image
-        run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache --build-arg channel=$CHANNEL -t ghcr.io/nxthat/$BINARY_NAME:$VERSION-$CHANNEL -f ./bin/$BINARY_NAME/Dockerfile .
+        run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache --builder=buildx-multi-arch --platform=linux/amd64,linux/arm64 --build-arg channel=$CHANNEL --push -t ghcr.io/nxthat/$BINARY_NAME:$VERSION-$CHANNEL -f ./bin/$BINARY_NAME/Dockerfile .
       # Export it as tar.gz
-      - name: Export image
-        run: docker save ghcr.io/nxthat/$BINARY_NAME:$VERSION-$CHANNEL | gzip > /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz
+      # - name: Export image
+      #   run: docker save ghcr.io/nxthat/$BINARY_NAME:$VERSION-$CHANNEL | gzip > /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz
       # Upload it to release
       - name: Test if release already exists
         id: release-exists
@@ -58,13 +68,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Create new draft release
         if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-        run: gh release create -t $BINARY_NAME-$VERSION-$CHANNEL -d $BINARY_NAME-$VERSION-$CHANNEL -F ./bin/$BINARY_NAME/changelog.md /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz#$BINARY_NAME-image;
+        run: gh release create -t $BINARY_NAME-$VERSION-$CHANNEL -d $BINARY_NAME-$VERSION-$CHANNEL -F ./bin/$BINARY_NAME/changelog.md
+        #  /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz#$BINARY_NAME-image;
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
-      - name: Update draft release
-        if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
-        run: |
-          gh release delete-asset -y $BINARY_NAME-$VERSION-$CHANNEL $BINARY_NAME-$VERSION-$CHANNEL.tar.gz || true
-          gh release upload $BINARY_NAME-$VERSION-$CHANNEL /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz#$BINARY_NAME-image
-        env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+      # - name: Update draft release
+      #   if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
+      #   run: |
+      #     gh release delete-asset -y $BINARY_NAME-$VERSION-$CHANNEL $BINARY_NAME-$VERSION-$CHANNEL.tar.gz || true
+      #     gh release upload $BINARY_NAME-$VERSION-$CHANNEL /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz#$BINARY_NAME-image
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
