--- a/examples/vm_example.yml
+++ b/examples/vm_example.yml
@@ -1,7 +1,25 @@
-Kind: VirtualMachine
+Kind: Deployment
 ApiVersion: v0.8
 
 Namespace: global
+
+# See all options:
+# https://docs.next-hat.com/references/nanocl/resource
+Resources:
+  - Name: vm-test
+    Kind: ProxyRule
+    Version: v0.6
+    Config:
+      Watch:
+        - vm-test.global.v
+      Rules:
+        - Domain: deploy-example.com
+          Network: Public
+          Protocol: Tcp
+          Port: 5555
+          Target:
+            Key: vm-test.global.v
+            Port: 22
 
 VirtualMachines:
   - Name: vm-test
@@ -10,4 +28,3 @@ VirtualMachines:
     HostConfig:
       Cpu: 2
       Memory: 2048
-      Kvm: true
