--- a/.github/workflows/draft_stable_nanocl.yml
+++ b/.github/workflows/draft_stable_nanocl.yml
@@ -27,11 +27,10 @@ jobs:
       # Extract branch info
       - name: Set info
         run: |
-          echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-          echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
-          echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
-          echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
-          echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $4}')" >> $GITHUB_ENV
+          echo "CHANNEL=$(echo ${GITHUB_REF} | awk -F/ '{print $4}')" >> $GITHUB_ENV
+          echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF} | awk -F/ '{print $4}')" >> $GITHUB_ENV
+          echo "BINARY_NAME=$(echo ${GITHUB_REF} | awk -F/ '{print $6}')" >> $GITHUB_ENV
+          echo "VERSION=$(echo ${GITHUB_REF} | awk -F/ '{print $7}')" >> $GITHUB_ENV
       # Print info for debug
       - name: Fix git permission
         run: |
