--- a/.github/workflows/publish_stable_image.yml
+++ b/.github/workflows/publish_stable_image.yml
@@ -1,12 +1,12 @@
-name: Publish nightly image
+name: Publish Stable Image
 
 on:
   push:
     branches:
-      - "release/nightly/bin/**"
+      - "release/stable/*"
   pull_request:
     branches:
-      - "release/nightly/bin/**"
+      - "release/stable/*"
     types: [opened, synchronize]
 
 env:
@@ -28,13 +28,6 @@ jobs:
         with:
           path: /tmp/.buildx-cache
           key: buildx-cache
-      # Login to ghcr.io
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: nexthatbot
-          password: ${{ secrets.BOT_TOKEN }}
       # Extract branch info
       - name: Set info
         run: |
@@ -45,7 +38,6 @@ jobs:
       # Print info for debug
       - name: Print Info
         run: |
-          echo $GITHUB_REF
           echo $BRANCH_NAME
           echo $BINARY_NAME
           echo $CHANNEL
@@ -54,28 +46,28 @@ jobs:
       - name: Create buildx multiarch
         run: docker buildx create --use --name=buildx-multi-arch --driver=docker-container --driver-opt=network=host
       # Build daemon image
+      # Build daemon image
       - name: Build image
         run: docker buildx build --builder=buildx-multi-arch --platform=linux/amd64,linux/arm64 --build-arg channel=$CHANNEL --push --label org.opencontainers.image.source=https://github.com/nxthat/nanocl -t ghcr.io/nxthat/$BINARY_NAME:$VERSION-$CHANNEL -t ghcr.io/nxthat/$BINARY_NAME:$CHANNEL -f ./bin/$BINARY_NAME/Dockerfile .
       # Export it as tar.gz
       # - name: Export image
-      #   run: docker save ghcr.io/nxthat/$BINARY_NAME:$VERSION-$CHANNEL | gzip > /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz
+      #   run: docker save ghcr.io/nxthat/$BINARY_NAME:$VERSION | gzip > /tmp/$BINARY_NAME-$VERSION.tar.gz
       # Upload it to release
       - name: Test if release already exists
         id: release-exists
         continue-on-error: true
-        run: gh release view $BINARY_NAME-$VERSION-$CHANNEL
+        run: gh release view $BINARY_NAME-$VERSION
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Create new draft release
         if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-        run: gh release create -t $BINARY_NAME-$VERSION-$CHANNEL -d $BINARY_NAME-$VERSION-$CHANNEL -F ./bin/$BINARY_NAME/changelog.md
-        #  /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz#$BINARY_NAME-image;
+        run: gh release create -t $BINARY_NAME-$VERSION -d $BINARY_NAME-$VERSION -F ./bin/$BINARY_NAME/changelog.md;
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       # - name: Update draft release
       #   if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
       #   run: |
-      #     gh release delete-asset -y $BINARY_NAME-$VERSION-$CHANNEL $BINARY_NAME-$VERSION-$CHANNEL.tar.gz || true
-      #     gh release upload $BINARY_NAME-$VERSION-$CHANNEL /tmp/$BINARY_NAME-$VERSION-$CHANNEL.tar.gz#$BINARY_NAME-image
+      #     gh release delete-asset -y $BINARY_NAME-$VERSION $BINARY_NAME-$VERSION.tar.gz || true
+      #     gh release upload $BINARY_NAME-$VERSION /tmp/$BINARY_NAME-$VERSION.tar.gz#$BINARY_NAME-image
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
