--- a/.github/workflows/publish_stable_image.yml
+++ b/.github/workflows/publish_stable_image.yml
@@ -3,10 +3,10 @@ name: Publish Stable Image
 on:
   push:
     branches:
-      - "release/stable/*"
+      - "release/stable/bin/**"
   pull_request:
     branches:
-      - "release/stable/*"
+      - "release/stable/bin/**"
     types: [opened, synchronize]
 
 env:
@@ -48,7 +48,7 @@ jobs:
       # Build daemon image
       # Build daemon image
       - name: Build image
-        run: docker buildx build --builder=buildx-multi-arch --platform=linux/amd64,linux/arm64 --build-arg channel=$CHANNEL --push --label org.opencontainers.image.source=https://github.com/nxthat/nanocl -t ghcr.io/nxthat/$BINARY_NAME:$VERSION-$CHANNEL -t ghcr.io/nxthat/$BINARY_NAME:$CHANNEL -f ./bin/$BINARY_NAME/Dockerfile .
+        run: docker buildx build --builder=buildx-multi-arch --platform=linux/amd64,linux/arm64 --build-arg channel=$CHANNEL --push --label org.opencontainers.image.source=https://github.com/nxthat/nanocl -t ghcr.io/nxthat/$BINARY_NAME:$VERSION -t ghcr.io/nxthat/$BINARY_NAME:latest -f ./bin/$BINARY_NAME/Dockerfile .
       # Export it as tar.gz
       # - name: Export image
       #   run: docker save ghcr.io/nxthat/$BINARY_NAME:$VERSION | gzip > /tmp/$BINARY_NAME-$VERSION.tar.gz
